--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,27 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+<div class="header">
+   <h1> Riley Mustain </h1>
+<h2> Maker of Things </h2>
+</div>
+<div class="tagline">
+  <h3> Learn More About Me </h3>
+  <p> Hello, my name is Riley Mustain I enjoy long walks on the beach, and coding in Python.</p>
+</div>
+<div class="skills">
+  <h3> My Skills </h3>
+  <p> I currently not the most skilled but I can read and write basic html/css as well as Python and i hope to expand my knowledge of other programming languages soon.</p>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Python</li>
+  </ul>
+  <div class="contact">
+    <h3> Contact me </h3>
+    <p> Contact me at 7riley@sbcglobal.net or on my twitter:<a href="https://twitter.com/anxietyschewtoy"></a> </p> 
 
-  Welcome to the HTML Portfolio Project
+
 
 </body>
 </html>
