--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   </ul>
   <div class="contact">
     <h3> Contact me </h3>
-    <p> Contact me at 7riley@sbcglobal.net or on my twitter:<a href="https://twitter.com/anxietyschewtoy"></a> </p> 
+    <p> Contact me at 7riley@sbcglobal.net or on my twitter:<a href="https://twitter.com/anxietyschewtoy">@anxietyschewtoy</a> </p>
 
 
 
